Updated blog design

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,8 @@
 ---
 layout: default
----  <style>
+---  
+
+<style>
     /* Base styles */
     body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -171,6 +173,7 @@ layout: default
         }
     }
 </style>
+
 <!-- Header with navigation -->
 <header class="header">
     <a href="/" class="logo">Xhorxhina's AI & Data Blog</a>
