--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -187,7 +187,7 @@ layout: default
     
     <div class="social-links">
         <a href="https://github.com/XhorxhinaTaraj" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/xhorxhina-taraj/" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
 </header>
 
