Updated blog design

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -201,7 +201,7 @@ layout: default
         
         <div class="button-container">
             <a href="/blog" class="button-primary">READ BLOG</a>
-            <a href="/about" class="button-secondary">LEARN MORE</a>
+            <a href="https://calendly.com/xhorxhina-taraj/15min?month=2025-03" class="button-secondary" target="_blank">BOOK NOW</a>
         </div>
     </div>
 </section>
