--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,8 +73,8 @@
         </nav>
         
         <div class="social-links">
-            <a href="https://github.com/{{ site.github_username }}" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/XhorxhinaTaraj" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/xhorxhina-taraj/" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
     </header>
 
